--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-
+/template.pdf
+/template.tex
+/comment.cut
+/.luarc.json
 /.quarto/
-.Rdata
-.httr-oauth
+.Rproj.user
 .DS_Store
-.quarto
+.RData
+.Rhistory
